<resources>
    <string name="app_name">Notas do Breno</string>

    <string name="title_activity_new_note">Nova nota</string>
    <string name="edit_note">Alterar nota</string>
    <string name="id">Identificador</string>
    <string name="title">Título</string>
    <string name="resume">Resumo</string>
    <string name="description">Descrição</string>
    <string name="date">Data</string>
    <string name="pick_date">Escolha a data</string>
    <string name="time">Horário</string>
    <string name="pick_time">Escolha o horário</string>
    <string name="frequency">Periodicidade</string>
    <string name="once">Uma vez</string>
    <string name="daily">Diariamente</string>
    <string name="weekly">Semanalmente</string>
    <string name="monthly">Mensalmente</string>
    <string name="annually">Anualmente</string>

    <string name="dialog_title_delete_note">Excluir nota</string>
    <string name="dialog_msg_delete_note">Tem certeza que deseja excluir a nota #%1$s?</string>

    <string name="save">Salvar</string>
    <string name="yes">Sim</string>
    <string name="cancel">Cancelar</string>
    <string name="leave">Sair</string>

    <string name="card_create_at">Criada em:</string>
    <string name="card_alert_at">Próximo alerta:</string>
    <string name="button_delete_desc">Deletar nota</string>

    <string name="title_activity_show_note">Detalhes</string>
    <string name="details_id">ID:</string>
    <string name="details_title">Título:</string>
    <string name="details_resume">Resumo:</string>
    <string name="details_description">Descrição:</string>
    <string name="details_create_at">Criada em:</string>
    <string name="details_alert_at">Próximo alerta:</string>
    <string name="details_frequency">Periodicidade:</string>

    <string name="msg_save_note">Nota criada com sucesso!</string>
    <string name="msg_delete_note">Nota excluída com sucesso!</string>
    <string name="msg_edit_note">Nota atualizada com sucesso!</string>
    <string name="msg_miss_field">Preencha todos os campos.</string>

</resources>
