<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <com.google.android.material.appbar.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/appBarLayout3">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:title="@string/title_activity_new_note"
                    android:elevation="4dp"
            />

        </com.google.android.material.appbar.AppBarLayout>

        <EditText
                android:id="@+id/noteTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"

                android:hint="@string/title"
                android:inputType="textShortMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:autofillHints="" app:layout_constraintTop_toTopOf="@+id/appBarLayout3"
                android:layout_marginTop="80dp"/>
        <EditText
                android:id="@+id/resume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"

                android:hint="@string/resume"
                android:inputType="textShortMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/noteTitle"
                android:autofillHints=""/>
        <EditText
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"

                android:hint="@string/description"
                android:imeOptions="actionDone"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/resume" android:autofillHints=""/>
        <TextView
                android:text="@string/date"
                android:layout_width="48dp"
                android:layout_height="wrap_content" android:id="@+id/textDate"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/description" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"/>
        <TextView
                android:text="@string/time"
                android:layout_width="48dp"
                android:id="@+id/textTime"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" app:layout_constraintTop_toBottomOf="@+id/textDate"
                android:layout_marginTop="36dp" android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textFrequency"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textTime"/>
        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup"
                app:layout_constraintStart_toEndOf="@+id/textFrequency" android:layout_marginStart="24dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonTime" android:layout_marginTop="28dp">
            <RadioButton
                    android:text="@string/once"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioButtonOnce"/>
            <RadioButton
                    android:text="@string/daily"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioButtonDaily"/>
            <RadioButton
                    android:text="@string/weekly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioButtonWeekly"/>
            <RadioButton
                    android:text="@string/monthly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioButtonMonthly"/>
            <RadioButton
                    android:text="@string/annually"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioButtonAnnually"/>
        </RadioGroup>
        <Button
                android:id="@+id/buttonSave"
                android:enabled="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.052" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                android:backgroundTint="@color/colorAccent"/>
        <Button
                android:id="@+id/buttonCancel"
                android:enabled="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.863" app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                android:layout_marginTop="16dp" android:backgroundTint="#DAD9D9"/>
        <Button
                android:text="@string/pick_date"
                android:layout_width="170dp"
                android:layout_height="40dp" android:id="@+id/buttonDate"
                app:layout_constraintStart_toEndOf="@+id/textDate"
                app:layout_constraintTop_toBottomOf="@+id/description"
                android:layout_marginStart="22dp" android:layout_marginTop="16dp"/>
        <Button
                android:text="@string/pick_time"
                android:layout_width="170dp"
                android:layout_height="40dp" android:id="@+id/buttonTime"
                app:layout_constraintStart_toEndOf="@+id/textTime" app:layout_constraintTop_toBottomOf="@+id/buttonDate"
                android:layout_marginStart="22dp" android:layout_marginTop="16dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textDatePicked"
                app:layout_constraintStart_toEndOf="@+id/buttonDate" android:layout_marginStart="12dp"
                app:layout_constraintTop_toBottomOf="@+id/description" android:layout_marginTop="28dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textTimePicked"
                app:layout_constraintStart_toEndOf="@+id/buttonTime" android:layout_marginStart="12dp"
                app:layout_constraintTop_toBottomOf="@+id/textDatePicked" android:layout_marginTop="34dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>