<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/details_frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewFrequency"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textAlertAt" android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"/>
            <TextView
                    android:text="@string/details_resume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewResume"
                    app:layout_constraintTop_toBottomOf="@+id/textTitle" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp" android:layout_marginTop="16dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textCreateAt"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCreate" android:layout_marginStart="24dp"/>
            <TextView
                    android:text="@string/details_alert_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewAlert"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp" app:layout_constraintTop_toBottomOf="@+id/textCreateAt"
                    android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/details_create_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewCreate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textDescription" android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textId"
                    android:textSize="20sp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewId" android:layout_marginStart="24dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textDescription"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDescription" android:layout_marginStart="24dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textFrequency"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewFrequency" android:layout_marginStart="24dp"/>
            <TextView
                    android:text="@string/details_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewDescription"
                    app:layout_constraintTop_toBottomOf="@+id/textResume"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textTitle"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
            <TextView
                    android:text="@string/details_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewId"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textResume"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/textViewResume"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            />
            <TextView
                    android:text="@string/details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewTitle"
                    app:layout_constraintTop_toBottomOf="@+id/textId" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp" android:layout_marginTop="16dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="27dp" android:id="@+id/textAlertAt"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewAlert" android:layout_marginStart="24dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
