<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="10dp"
        android:id="@+id/card"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/noteId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="# 21" android:textSize="12sp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:id="@+id/noteTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="titulo" android:textSize="24sp"
                    app:layout_constraintTop_toBottomOf="@+id/noteId" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete_red_24dp"
                    android:contentDescription="@string/button_delete_desc"
                    android:backgroundTint="#00FFFFFF"
                    android:scaleType="centerInside"
                    android:scaleX="1.3"
                    android:scaleY="1.3"
                    android:id="@+id/buttonDelete"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:id="@+id/resume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="resumo"
                    app:layout_constraintTop_toBottomOf="@+id/noteTitle" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="389dp"
                android:layout_height="wrap_content">

            <TextView
                    android:textStyle="bold"
                    android:text="@string/card_create_at"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            />
            <TextView
                    android:text="21/10/2019 17:40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/create_at" android:layout_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            />
            <TextView
                    android:textStyle="bold"
                    android:text="@string/card_alert_at"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"
                    app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="21/10/2019 17:40"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp" android:id="@+id/alert_at" android:layout_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/create_at"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>